# Aquea

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DIAGNOSIS.md  Makefile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  pages.yml
LICENSES/: CODE_LICENSE.txt  HARDWARE_LICENSE.txt
docs/: .nojekyll  ARCHITECTURE.md  index.html  index.md
hardware/firmware/esp32/: README.md
hardware/kicad/: README.md
infra/db/: init.sql
libs/nesshash-adapter/: pyproject.toml
libs/nesshash-adapter/nesshash_adapter/: __init__.py
libs/nesshash-adapter/tests/: test_adapter.py
services/device-hub/: Dockerfile  app.py  requirements.txt
services/gateway/: Dockerfile  app.py  ledger.py  requirements.txt
services/gateway/tests/: test_ledger.py
services/ml-service/: Dockerfile  app.py  requirements.txt
services/ml-service/tests/: test_api.py
services/simulator/: Dockerfile  publisher.py
