[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aquea"
version = "0.1.0"
description = "Open Water Reclamation System"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "MK Worldwide", email = "info@mkworldwide.io"}
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "psycopg[binary]>=3.1.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "paho-mqtt>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.20.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
]

test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.20.0",
    "httpx>=0.25.0",
]

docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.20.0",
    "mkdocs-awesome-pages>=2.8.0",
    "mkdocs-markdownextradata-plugin>=0.3.0",
]

[project.urls]
Homepage = "https://github.com/MKWorldWide/Aquea"
Documentation = "https://mkworldwide.github.io/aquea/"
Repository = "https://github.com/MKWorldWide/Aquea"
Changelog = "https://github.com/MKWorldWide/Aquea/releases"

[project.scripts]
aquea = "aquea.cli:main"

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "YTT", # flake8-2020
    "FBT", # flake8-boolean-trap
    "Q",   # flake8-quotes
    "RUF", # ruff-specific rules
]
ignore = [
    "D203",  # One blank line required before class docstring (conflicts with D211)
    "D212",  # Multi-line docstring summary should start at the first line
]

[tool.ruff.per-file-ignores]
"tests/*" = [
    "S101",  # Use of assert detected
    "ARG001", # Unused method argument
    "PLR2004" # Magic value used in comparison
]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["aquea"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["pydantic.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
addopts = "-v --cov=aquea --cov-report=term-missing"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["aquea"]
omit = ["**/__init__.py", "**/tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 80

[tool.coverage.html]
directory = "htmlcov"
title = "Aquea Test Coverage"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
